--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ GOOGLE_CLIENT_SECRET=your_google-client_secret
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
 AUTH_URL=http://localhost:3000
+
+SOCKET_SERVER_URL=http://localhost:4001
+NEXT_PUBLIC_SOCKET_SERVER_URL=http://localhost:4001
+SOCKET_SERVER_SECRET=dev-secret
