--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:socket": "node server/socket-server.js",
+    "dev:full": "concurrently -k -n next,socket -c blue,magenta \"npm run dev\" \"npm run dev:socket\"",
     "build": "prisma migrate deploy && prisma generate && next build",
     "start": "next start",
     "lint": "next lint && npm run lint:tsc",
@@ -46,6 +48,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "resend": "^4.6.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
@@ -66,6 +70,7 @@
     "prisma": "^6.10.1",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.0",
+    "concurrently": "^8.2.2",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
