--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:watch": "jest --watch",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
+    "test:e2e:db": "playwright test tests/e2e/notes-with-db-verification.spec.ts tests/e2e/api-integration.spec.ts",
+    "test:setup": "prisma migrate dev --name init && prisma generate",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
